Applied patch from http://reviewboard.kde.org/r/4417/ except the last hunk changing the KMyMoneyGeneralCombo and added a timeout logic to it.

BUG: 240629

svn path=/trunk/extragear/office/kmymoney/; revision=1153500